--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.4",
     "next": "^14.2",
+    "nodemailer": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
